# ees-v5

./: .gitignore  DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  PYTHON_HYBRID_SETUP.md  README.md  SOMPO_PLAYWRIGHT.md  SOMPO_PYTHON_FULL.md  docker-compose.prod.yml  docker-compose.yml
backend/: requirements.txt
client/: Dockerfile  env.example  next.config.js  package-lock.json  (+2 more)
server/: .env.bak  Cargo.toml  Dockerfile  env.example  env.production.example
server/migrations/: 20240101000001_initial_schema.sql
server/src/: config.rs  main.rs
server/src/auth/: hash.rs  jwt.rs  middleware.rs  mod.rs
server/src/browser/: cdp.rs  driver.rs  mod.rs  session.rs
server/src/db/: logs.rs  mod.rs  models.rs  policies.rs  quotes.rs  users.rs
server/src/http/: admin_routes.rs  auth_routes.rs  errors.rs  mod.rs  models.rs  quotes_routes.rs  rate_limit.rs  routes.rs  state.rs  user_routes.rs
server/src/providers/: base.rs  mod.rs  registry.rs
server/src/providers/anadolu/: mod.rs
server/src/providers/axa/: mod.rs
server/src/providers/quick/: login.rs  mod.rs  parser.rs  quote.rs  selectors.rs
server/src/providers/sompo/: login.rs  mod.rs  parser.rs  python_login.rs  python_scraper.rs  quote.rs  quote_cdp.rs  selectors.rs
server/src/services/: cache.rs  email.rs  mod.rs  pdf.rs  quote_aggregator.rs
server/src/utils/: mask.rs  mod.rs  parser.rs
server/tests/: chromedriver_test.rs  integration_test.rs  parser_test.rs
server/tests/fixtures/: .gitkeep
server/tests/integration/: admin_api_test.rs  mod.rs  multi_provider_test.rs  sompo_provider_test.rs
(+36 files in other folders)
